# Lodestarr

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: docker.yml  release.yml  rust.yml
docs/: DEMO_WALKTHROUGH.md
scripts/: ci-check.sh  test_torznab.sh
src/: config.rs  db.rs  download.rs  error.rs  main.rs  search.rs  server.rs  torznab.rs  tui.rs  utils.rs
src/clients/: mod.rs  qbittorrent.rs
src/indexer/: definition.rs  downloader.rs  executor.rs  field_extractor.rs  filters.rs  manager.rs  mod.rs  native.rs  result_builder.rs  selector.rs  template.rs  traits.rs
src/models/: category.rs  mod.rs  search.rs  torrent.rs
src/server/: api_clients.rs  api_indexers.rs  api_info.rs  api_native.rs  api_settings.rs  mod.rs  static_files.rs
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: AppearanceSettings.tsx  Dashboard.tsx  EditIndexerModal.tsx  Indexers.tsx  NativeIndexers.tsx  RecentActivity.tsx  ResultDetailsModal.tsx  Search.tsx  SearchResultsList.tsx  SearchResultsTable.tsx  Settings.tsx  Sidebar.tsx
web/src/components/indexers/: AddIndexerForm.tsx  BrowseIndexersGrid.tsx  IndexerSettingsForm.tsx  IndexerTestSection.tsx  InstalledIndexersTable.tsx  ProxiedIndexerForm.tsx  index.ts
web/src/components/search/: SearchFiltersBar.tsx  SearchPagination.tsx  index.ts
web/src/components/settings/: CacheSettings.tsx  ClientsSettings.tsx  DataSettings.tsx  DownloadSettings.tsx  ProxySettings.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  MirrorSelector.tsx  Modal.tsx  Spinner.tsx  index.ts
web/src/constants/: categories.ts
web/src/contexts/: ThemeContext.tsx
web/src/hooks/: useCopyToClipboard.ts  useDownloadClients.ts  useTorrentMeta.ts
web/src/styles/: shared.ts
web/src/types/: api.ts  indexer.ts
web/src/utils/: formatters.ts
web/tests/: .gitignore  README.md
web/tests/ui/: comprehensive.test.ts  dashboard.test.ts  demo_walkthrough.test.ts  indexer-setup.ts  indexer.test.ts  jest.config.cjs  navigation.test.ts  screenshots.test.ts  search.test.ts  setup.ts  test-server.cjs  theme.test.ts  tsconfig.json
web/tests/ui/screenshots/: README.md
