[package]
name = "lodestarr"
version = "0.4.2-0"
edition = "2024"
description = "Feature-rich Torznab CLI client for Jackett, Prowlarr, and compatible servers"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.12.25", features = ["json", "cookies"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Web Framework
axum = { version = "0.8.7", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
rust-embed = "8.9.0"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI parsing
clap = { version = "4.5.53", features = ["derive", "env"] }

# XML parsing
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Output formatting
tabled = "0.20.0"
colored = "3.0.0"

# URL handling
url = "2"
urlencoding = "2"

# Regex for XML parsing
regex = "1"

# TUI
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-input = "0.14.0"

# Error handling
anyhow = "1"

# Config paths
directories = "6.0.0"

# Async Utilities
futures = "0.3"
