[package]
name = "lodestarr"
version = "0.4.2-0"
edition = "2024"
description = "Feature-rich Torznab CLI client for Jackett, Prowlarr, and compatible servers"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.12.25", features = ["json", "cookies"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Web Framework
axum = { version = "0.8.7", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
rust-embed = "8.9.0"
mime_guess = "2"
# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4.5.53", features = ["derive", "env"] }

# XML/YAML parsing
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"  # NEW: For indexer YAML definitions
toml = "0.8"

# HTML parsing (NEW: For native indexer scraping)
scraper = "0.20"

# Output formatting
tabled = "0.20.0"
colored = "3.0.0"

# URL handling
url = "2"
urlencoding = "2"

# Regex for XML parsing and indexer filters
regex = "1"
fancy-regex = "0.14"  # NEW: Advanced regex for complex patterns
once_cell = "1.20"  # NEW: For caching compiled regex patterns

# Date/Time parsing (NEW: For indexer date filters)
chrono = { version = "0.4", features = ["serde"] }

# TUI
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-input = "0.14.0"

# Error handling
anyhow = "1"
thiserror = "2"  # NEW: Better error types

# Utilities (NEW: For indexer processing)
html-escape = "0.2"
async-trait = "0.1"
base64 = "0.22"

# Config paths
directories = "6.0.0"

# Async Utilities
futures = "0.3"

# Database
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26"
